Fixed button overlapping text problem on form submission confirmation page

--- a/src/clincoded/static/scss/clincoded/modules/_form.scss
+++ b/src/clincoded/static/scss/clincoded/modules/_form.scss
@@ -210,6 +210,10 @@ input[type=search] {
     margin-top: -40px;
     margin-bottom: 40px;
 
+    @media screen and (max-width: $screen-sm-min) {
+        margin-top: 0;
+    }
+
     .row {
         margin: 20px 0;
     }
